fix(entry-editor): change spacing arrow

--- a/jabgui/src/main/resources/org/jabref/gui/jabref-javafx.css
+++ b/jabgui/src/main/resources/org/jabref/gui/jabref-javafx.css
@@ -681,7 +681,7 @@ TextFlow > .tooltip-text-monospaced {
  * field sections (which aren't hosted in an .accordion).
  */
 .titled-pane > .title > .arrow-button {
-    -fx-padding: 0.0em 0.6em 0.0em 0.0em;
+    -fx-padding: 0.0em 0.4em 0.0em 0.0em;
 }
 
 /*
